--- a/DEEPSEEKFINETUNEDMODEL.ipynb
+++ b/DEEPSEEKFINETUNEDMODEL.ipynb
@@ -4,7 +4,9 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "T4"
+      "gpuType": "T4",
+      "authorship_tag": "ABX9TyOKTm5HlouCNcDClrWkwkFh",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -8570,6 +8572,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/KunjShah95/FINE-TUNED-MODELS/blob/main/DEEPSEEKFINETUNEDMODEL.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "execution_count": 2,
