--- a/DEEPSEEKFINETUNEDMODEL.ipynb
+++ b/DEEPSEEKFINETUNEDMODEL.ipynb
@@ -9871,10 +9871,10 @@
     {
       "source": [
         "# Pushing with 4bit precision\n",
-        "model.push_to_hub_merged(\"kunjshah01/deepseek_coder\", tokenizer, save_method=\"merged_4bit_forced\", token=\"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\")\n",
+        "model.push_to_hub_merged(\"kunjshah01/deepseek_coder\", tokenizer, save_method=\"merged_4bit_forced\", token=\"")\n",
         "\n",
         "# Pushing with 16 bit precision\n",
-        "model.push_to_hub_merged(\"kunjshah01/deepseek_coder\", tokenizer, save_method=\"merged_16bit\", token=\"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\")"
+        "model.push_to_hub_merged(\"kunjshah01/deepseek_coder\", tokenizer, save_method=\"merged_16bit\", token=\"")"
       ],
       "cell_type": "code",
       "metadata": {
